--- a/MyApp/Views/Home/Utilisateurs.cshtml
+++ b/MyApp/Views/Home/Utilisateurs.cshtml
@@ -28,6 +28,7 @@
                 <td>@Html.DisplayFor(modelItem => item.password)</td>
                 <td>@Html.DisplayFor(modelItem => item.email)</td>
                 <td>@Html.DisplayFor(modelItem => item.valide)</td>
+                <td>@Html.DisplayFor(modelItem => item.role)</td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.id">Details</a> |
