--- a/MyApp/Views/Posts/Details.cshtml
+++ b/MyApp/Views/Posts/Details.cshtml
@@ -17,12 +17,10 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.sujet)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.reponse)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.reponse)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.auteurid)
         </dd>
+        
     </dl>
 </div>
 <div>
